<resources>
    <string name="app_name">Android Training</string>
    <string name="welcome_msg">Welome to Android World</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="signup">Sing Up</string>
    <string name="loginmsg">Login Here</string>
    <string name="title_activity_sing_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">fe Male</string>
    <string name="gender">Gender</string>
    <string name="accept">Accept terms and conditions </string>
    <string name="clear">clear</string>
    <string-array name="countries">


        <item>India</item>
        <item>US</item>
        <item>UK</item>
        <item>CHAINA</item>
        <item>Australia</item>

    </string-array>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="title_activity_uber">ActivityUber</string>
    <string name="title_activity_movie_info">MovieInfoActivity</string>
    <string name="title_activity_splash">ActivitySplash</string>
</resources>
