<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edu.sra.trainings.LoginActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginmsg"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold|italic"
        android:textSize="22sp"
        android:gravity="center"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/id_et_username"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/id_et_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:id="@+id/id_btn_login"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_weight="1"
                android:id="@+id/id_btn_signup"

                />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
